# barbican-ui

./: .zuul.yaml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
barbican_ui/api/: rest_api.py
barbican_ui/content/aws/: api.py  forms.py  panel.py  tables.py  views.py
barbican_ui/content/aws/templates/aws/: _create.html  create.html  index.html
barbican_ui/content/secrets/: tables.py  urls.py  views.py
barbican_ui/content/secrets/templates/secrets/: create.html
barbican_ui/enabled/: _1810_barbican_barbican_panelgroup.py  _1810_project_barbican_panelgroup.py  _1820_project_secrets_panel.py  _1830_project_aws_panel.py  _4000_barbican.py  _4010_barbican_barbican_secrets_panel.py  _4010_barbican_secrets_panel.py
barbican_ui/static/dashboard/project/: barbican.module.js  barbican.service.js
barbican_ui/static/dashboard/project/secrets/: create_key.html  list_secrets.html  panel.html  secrets.controller.js  secrets.module.js  secrets.module.spec.js  secrets.service.js  secrets.service.spec.js
barbican_ui/static/dashboard/project/secrets/actions/: actions.module.js  create.service.js  delete.service.js  update.service.js
barbican_ui/static/dashboard/project/secrets/details/: details.module.js  overview.controller.js  overview.html
barbican_ui/static/dashboard/project/secrets/workflow/: secret-model.js  workflow.service.js
devstack/: plugin.sh  setting
releasenotes/source/: conf.py
